# z1_nmpc_pkg

./: EndEffectorObsConstraint.cpp  EndEffectorObtConstraint.h  MobileManipulatorInterface.cpp  MobileManipulatorInterface.h  README.md  task.info
ocs2_mobile_manipulator_ros/: CMakeLists.txt
ocs2_mobile_manipulator_ros/include/ocs2_mobile_manipulator_ros/: MobileManipulatorDummyVisualization.h
ocs2_mobile_manipulator_ros/launch/: manipulator_franka.launch  manipulator_unitreez1.launch
ocs2_mobile_manipulator_ros/launch/include/: mobile_manipulator.launch  z1_real_arm.launch
ocs2_mobile_manipulator_ros/rviz/: mobile_manipulator.rviz
ocs2_mobile_manipulator_ros/src/: MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorRealVisualization.cpp  MobileManipulatorSqpMpcNode.cpp
unitree_z1/urdf/: z1.urdf
unitree_z1_mpc/: CMakeLists.txt  package.xml
unitree_z1_mpc/examples/: policy_to_real.cpp
unitree_z1_mpc/include/: communication_thread.h  mathTypes.h
unitree_z1_mpc/include/unitree_arm_sdk/control/: ctrlComponents.h  unitreeArm.h
unitree_z1_mpc/src/: communication_thread.cpp
